# vSomeIP-simple-example

./: CMakeLists.txt  README.md  client.cpp  service.cpp
docker-boost-build/: Dockerfile
docker-vsomeip-build/: Dockerfile
docker-vsomeip-build/example/: CMakeLists.txt  client.cpp  sample-ids.hpp
docker-vsomeip-client/: Dockerfile
docker-vsomeip-client/example/: CMakeLists.txt  client_basic.cpp  config-client.json
docker-vsomeip-service/: Dockerfile
docker-vsomeip-service/example/: CMakeLists.txt  config-service.json  service_basic.cpp
src/client/: ClientAdapter.cpp  ClientAdapter.hpp  main.cpp
src/service/: ServiceManagerAdapter.cpp  ServiceManagerAdapter.hpp  main.cpp
